Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27152

clangd code completion slower than with libclang

XMLWordPrintable

    • Windows
    • 86b8f68f78 (qt-creator/qt-creator/9.0)

      I've compared a Qt Creator 7 MinGW build that uses LLVM/Clang 14.0 PGO optimized binaries with both clangd and libclang in a simple scenario:

      1. Load Qt Creator 7 project
      2. open texteditor.cpp
      3. navigate at the end of the file and do Ctrl+Space

      In the two attached screenshots you can see the difference. libclang is visibly faster than clangd.

      QtCreator7-clangd-14-mingw-optimized.mp4
      QtCreator7-libclang-14-mingw-optimized.mp4

        1. qtc-7.0.0-clangd-full.log
          11 kB
          Cristian Adam
        2. qtc-7.0.0-clangd-full.mp4
          2.94 MB
          Cristian Adam
        3. qtc-7.0.2-clangd-single.log
          10 kB
          Cristian Adam
        4. qtc-7.0.2-clangd-single.mp4
          2.71 MB
          Cristian Adam
        5. qtc-7.0.2-libclang.log
          221 kB
          Cristian Adam
        6. qtc-7.0.2-libclang.mp4
          2.31 MB
          Cristian Adam
        7. QtCreator7-clangd-14-mingw-optimized.mp4
          2.54 MB
          Cristian Adam
        8. QtCreator7-libclang-14-mingw-optimized.mp4
          2.12 MB
          Cristian Adam
        For Gerrit Dashboard: QTCREATORBUG-27152
        # Subject Branch Project Status CR V

            cadam Cristian Adam
            cadam Cristian Adam
            Votes:
            3 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes